--- a/Frontend/app/src/App.css
+++ b/Frontend/app/src/App.css
@@ -27,6 +27,9 @@
 .App-link {
   color: #61dafb;
 }
+div {
+padding: 10%;
+}
 
 @keyframes App-logo-spin {
   from {
@@ -35,4 +38,26 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.edit-worker-container {
+  padding: 2rem;
+  max-width: 500px;
+  margin: 0 auto;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.wide {
+  width:100%;
+  height:40px;
+}
+.bigger-labels {
+  font-size: 1.5rem;
+  margin: 1rem;
+}
+
+ button.wide  {
+  font-size: 1.5rem;
 }
